--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "nutrilife",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "src/Index.tsx",
+  "license": "AGPL-3.0-only",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "lint": "eslint . --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "expo": "~51.0.28",
@@ -17,7 +19,13 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "prettier": "^3.3.3",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
